--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-    background-color: mediumaquamarine;
+    background-color: rgb(240, 227, 90);
 }
 h1{
-    background-color: orangered;
+    background-color: rgb(123, 246, 56);
 }
